--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "author": "Arfy",
   "license": "ISC",
   "dependencies": {
-    "@whiskeysockets/baileys": "github:RyuuXiaoo/ryuu-xiao-bail",
+    "@whiskeysockets/baileys": "github:JarotOffc/Oscar-bail",
     "awesome-phonenumber": "^2.69.0",
     "chalk": "^4.1.2",
     "child_process": "^1.0.2",
